--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -24,18 +24,35 @@
     "Una vez hecho esto podemos utilizar nuestro conocimiento de programacion para generar graficos y estadisticas que nos permitan descubrir informacion extra que puede ser interesante. \n",
     "\n",
     "En esta unidad veremos las siguientes herramientas que disponemos con python para analizar datos:\n",
-    "- Graficos:\n",
+    "\n",
+    "\n",
+    "Graficos:\n",
     "  - [Seaborn](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb)\n",
     "  - [Matplotlib](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb)\n",
-    "- Limpieza y manipulacion de datos con \n",
+    "  \n",
+    "  \n",
+    "Limpieza y manipulacion de datos con \n",
     "  - [Pandas](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb)\n",
     "  - [Numpy](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb)\n",
     "  - [Cleanlab](https://docs.cleanlab.ai/stable/index.html)\n",
-    "- Profiling:\n",
+    "  \n",
+    "  \n",
+    "Profiling (EDA con una linea de codigo):\n",
     "  - [sweetviz](https://github.com/fbdesignpro/sweetviz)\n",
     "  - [ydata](https://github.com/ydataai/ydata-profiling) \n",
-    "- Tests de distribuciones de probabilidad:\n",
+    "  \n",
+    "Tests de distribuciones de probabilidad:\n",
     "  - [Fitter](https://github.com/cokelaer/fitter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a3438e6-fe10-453c-9067-01742c7febc9",
+   "metadata": {},
+   "source": [
+    "Otras librerias interesantes que iremos incluyendo en el curso mas adelante:\n",
+    "- Limpieza de datos con: [pyjanitor](https://pyjanitor-devs.github.io/pyjanitor/)\n",
+    "- [Graficos dentro de un dataframe de pandas](https://colab.research.google.com/github/mattharrison/effective_pandas_book/blob/main/34-styling-code.ipynb) con [sparklines](https://dash.plotly.com/dash-ag-grid/enterprise-sparklines)"
    ]
   },
   {
