--- a/cursos/espanol/datascience/A2.1_eda_sweetviz.ipynb
+++ b/cursos/espanol/datascience/A2.1_eda_sweetviz.ipynb
@@ -17,153 +17,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "875f64a0-2dc4-44b9-8cc8-548a01972370",
+   "cell_type": "markdown",
+   "id": "f5831bbf-81ae-4534-a238-ae03e38befb7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#importamos la libreria de pandas\n",
-    "import pandas as pd"
+    "Cargamos el dataset de entrenamiento de pacientes con diabetes de las unidades anteriores:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9af99f88-88d0-45dd-bcab-21186345a80e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>colesterol</th>\n",
-       "      <th>glucosa</th>\n",
-       "      <th>fuma</th>\n",
-       "      <th>alcohol</th>\n",
-       "      <th>gimnasia</th>\n",
-       "      <th>presion</th>\n",
-       "      <th>diabetes</th>\n",
-       "      <th>edad</th>\n",
-       "      <th>altura</th>\n",
-       "      <th>peso</th>\n",
-       "      <th>sexo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100/80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>54</td>\n",
-       "      <td>169</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>f</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120/82</td>\n",
-       "      <td>0</td>\n",
-       "      <td>49</td>\n",
-       "      <td>165</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120/80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21962</td>\n",
-       "      <td>170</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>120\\80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20287</td>\n",
-       "      <td>169</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>120/80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16202</td>\n",
-       "      <td>166</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>masculino</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  colesterol glucosa  fuma  alcohol  gimnasia presion  diabetes   edad  \\\n",
-       "0       bajo    baja     0        0         1  100/80         0     54   \n",
-       "1       bajo    baja     0        0         1  120/82         0     49   \n",
-       "2       bajo    baja     0        0         1  120/80         0  21962   \n",
-       "3       bajo    baja     0        0         0  120\\80         0  20287   \n",
-       "4       bajo    baja     0        0         0  120/80         0  16202   \n",
-       "\n",
-       "   altura  peso       sexo  \n",
-       "0     169  76.0          f  \n",
-       "1     165  65.0          m  \n",
-       "2     170  56.0          m  \n",
-       "3     169  62.0          m  \n",
-       "4     166  67.0  masculino  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "df_ana_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_analisis.csv')\n",
     "df_inf_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_info.csv')\n",
     "df_train = pd.merge(df_ana_train,df_inf_train,on=\"id\")\n",
@@ -172,8 +40,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc67488c-4952-4318-aac4-2b95616f8210",
+   "metadata": {},
+   "source": [
+    "Instalamos e importamos sweetviz"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a57a35d8-c5c2-40a4-82a6-915975d7212f",
    "metadata": {},
    "outputs": [],
@@ -183,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "52c5e41c-52ca-402c-b9f6-f503b5b46d9b",
    "metadata": {},
    "outputs": [],
@@ -193,206 +69,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "af3b0db3-fa3b-49aa-8b00-6096de10ac0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ejecutamos el analisis y lo mostramos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "21a5b57c-e7be-41a6-843d-a74fc475f351",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6333c346ade0427898bc871d6e79ce89",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "                                             |                                                      | [  0%]  …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Report SWEETVIZ_REPORT.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_report = sv.analyze(df_train)\n",
     "my_report.show_html()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a0de85b-f85d-44cb-8efe-3b54ec220a28",
+   "metadata": {},
+   "source": [
+    "Ahora ejecutamos un analisis teniendo en cuenta que la columna objetivo es la de diabetes:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4e487da0-17e4-4d28-926e-680cc4023877",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4e15d07183e4c24a65569c56b419ef5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "                                             |                                                      | [  0%]  …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Report SWEETVIZ_REPORT.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_report = sv.analyze(df_train, target_feat=\"diabetes\")\n",
     "my_report.show_html()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f28fd646-2f0a-4fdc-a363-ce1b62537f11",
+   "metadata": {},
+   "source": [
+    "Finalmente ejecutamos un analisis comparando el dataset de entrenamiento con el de prueba."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "96dda013-f3e1-4e4a-8945-68d8a392e2c5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>colesterol</th>\n",
-       "      <th>glucosa</th>\n",
-       "      <th>fuma</th>\n",
-       "      <th>alcohol</th>\n",
-       "      <th>gimnasia</th>\n",
-       "      <th>presion</th>\n",
-       "      <th>diabetes</th>\n",
-       "      <th>edad</th>\n",
-       "      <th>altura</th>\n",
-       "      <th>peso</th>\n",
-       "      <th>sexo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>media</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>120/80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>61</td>\n",
-       "      <td>165</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>f</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>100\\70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14582</td>\n",
-       "      <td>162</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>140/100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23389</td>\n",
-       "      <td>156</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120\\90</td>\n",
-       "      <td>0</td>\n",
-       "      <td>47</td>\n",
-       "      <td>162</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>bajo</td>\n",
-       "      <td>baja</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>130\\80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18388</td>\n",
-       "      <td>162</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>f</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  colesterol glucosa  fuma  alcohol  gimnasia  presion  diabetes   edad  \\\n",
-       "0       bajo   media     0        0         0   120/80         1     61   \n",
-       "1       bajo    baja     0        0         1   100\\70         0  14582   \n",
-       "2       bajo    baja     0        0         0  140/100         1  23389   \n",
-       "3       bajo    baja     0        0         1   120\\90         0     47   \n",
-       "4       bajo    baja     0        0         0   130\\80         0  18388   \n",
-       "\n",
-       "   altura  peso sexo  \n",
-       "0     165  90.0    f  \n",
-       "1     162  50.0    m  \n",
-       "2     156  74.0    m  \n",
-       "3     162  89.0    m  \n",
-       "4     162  72.0    f  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_ana_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_analisis.csv')\n",
     "df_inf_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_info.csv')\n",
@@ -403,32 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6102ba67-b28d-4d5b-a126-66dce1672b72",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f264d32a11cb4578ae778a4a4bb5b851",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "                                             |                                                      | [  0%]  …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Report SWEETVIZ_REPORT.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_report = sv.compare([df_train, \"Training Data\"], [df_test, \"Test Data\"], target_feat=\"diabetes\")\n",
     "my_report.show_html()"
