--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -7,8 +7,21 @@
    "source": [
     "# AutoML: Machine Learning Automatico\n",
     "\n",
-    "El proceso de Machine Learning se puede automatizar un poco. Hay varios servicios en internet que lo hacen y tambien varias librerias. Aqui veremos la libreria FLAML de microsoft: \n",
-    "- https://microsoft.github.io/FLAML/docs/Getting-Started/"
+    "El proceso de Machine Learning se puede automatizar un poco. Hay varios servicios en internet que lo hacen y tambien varias librerias. Aqui veremos las siguientes librerias: \n",
+    "- [FLAML](https://microsoft.github.io/FLAML/docs/Getting-Started/)\n",
+    "- [AutoGluon](https://auto.gluon.ai/)\n",
+    "- [PyCaret](https://pycaret.org/)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "469d0090-e07c-4f9e-ba91-caa23f703797",
+   "metadata": {},
+   "source": [
+    "## FLAML\n",
+    "\n",
+    "Comencemos con FLAML para automatizar solo el proceso de seleccion del algoritmo de machine learning y los hiperparametros"
    ]
   },
   {
@@ -173,19 +186,157 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8498e3e5-adc2-407c-98a3-aeb453fc2ea5",
+   "id": "85ab9737-bd6c-424a-8b71-99edda9ebd11",
    "metadata": {},
    "source": [
-    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+    "## AutoGluon\n",
+    "\n",
+    "Ahora utilizaremos AutoGluon para automatizar solo el proceso de seleccion del algoritmo de machine learning y los hiperparametros"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d86d3ca-5f9a-4718-8c57-0a9da4e73e52",
+   "id": "75a2f316-260a-4efc-8ea0-fb41842afa6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install autogluon -U -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cfeb65b-1762-4975-82a3-4aef1d5d379d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autogluon.tabular import TabularDataset, TabularPredictor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcc5bf2d-ff54-4f0c-8ac0-574c28d4e9d4",
+   "metadata": {},
+   "source": [
+    "Cargamos los datos de entrenamiento en la clase especial de AutoGluon llamada TabularDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b206b1bf-b7de-402c-a0ee-72076f4c1f37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_procesado.csv'\n",
+    "train_data = TabularDataset(train_data_url)\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cc0915c-8df8-4699-a99d-dd6f210aaa12",
+   "metadata": {},
+   "source": [
+    "Entrenamos varios modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89f0d350-0a54-45b5-94a8-8b0ab39b719b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = TabularPredictor(label='diabetes').fit(train_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a35007-4c64-4974-a862-4b46e0b57269",
+   "metadata": {},
+   "source": [
+    "Cargamos los datos de prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79eb38b0-89f7-41d0-9e76-ab66c1f726b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data_url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_procesado.csv'\n",
+    "test_data = TabularDataset(test_data_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5ca2276-eb5f-4ba3-92e2-1a45e6b207a2",
+   "metadata": {},
+   "source": [
+    "Evaluamos los modelos y comparamos sus metricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f64d6a-963f-4f46-9d0f-cb8e96fb8cbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.evaluate(test_data, silent=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b8bb22-e109-4741-a72f-82e2398e17d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor.leaderboard(test_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78c56dbb-0d99-4d34-b1ec-8e1b05b46b70",
+   "metadata": {},
+   "source": [
+    "Finalmente hacemos las predicciones que queremos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd1763c-f719-4c8e-a75d-27fec52de222",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = predictor.predict(test_data.drop(columns=['diabetes']))\n",
+    "y_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40162309-236f-436e-bf78-049f7f4825b7",
+   "metadata": {},
+   "source": [
+    "## PyCaret\n",
+    "\n",
+    "PyCaret nos ofrece la posibilidad de automatizar todo el proceso desde el Analisis Exploratorio de Datos, pasando por el Machine Learning hasta el analisis y la interpretacion de los resultados por ello le dedicaremos una unidad especial que puedes ver aqui.\n",
+    "\n",
+    "- https://pycaret.gitbook.io/docs/get-started/tutorials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8498e3e5-adc2-407c-98a3-aeb453fc2ea5",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+   ]
   }
  ],
  "metadata": {
