--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -325,9 +325,7 @@
    "source": [
     "## PyCaret\n",
     "\n",
-    "PyCaret nos ofrece la posibilidad de automatizar todo el proceso desde el Analisis Exploratorio de Datos, pasando por el Machine Learning hasta el analisis y la interpretacion de los resultados por ello le dedicaremos una unidad especial que puedes ver aqui.\n",
-    "\n",
-    "- https://pycaret.gitbook.io/docs/get-started/tutorials"
+    "PyCaret nos ofrece la posibilidad de automatizar todo el proceso desde el Analisis Exploratorio de Datos, pasando por el Machine Learning hasta el analisis y la interpretacion de los resultados por ello le dedicaremos una unidad especial que puedes ver [aqui](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/11_pycaret.ipynb)."
    ]
   },
   {
