--- a/cursos/espanol/datascience/0__datasets.ipynb
+++ b/cursos/espanol/datascience/0__datasets.ipynb
@@ -120,9 +120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base2",
    "language": "python",
-   "name": "python3"
+   "name": "base2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
