--- a/cursos/espanol/datascience/0__graficos.ipynb
+++ b/cursos/espanol/datascience/0__graficos.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "83ace56d-713d-496b-85ce-da6ad05d33a6",
+   "metadata": {},
+   "source": [
+    "# Graficos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4212637a-497e-4925-bd2c-4c7642c87cea",
    "metadata": {},
    "source": [
