--- a/cursos/espanol/programacion/6.1_funciones.ipynb
+++ b/cursos/espanol/programacion/6.1_funciones.ipynb
@@ -698,9 +698,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay 4 numeros primos entre 2 y 10\n"
+     ]
+    }
+   ],
    "source": [
     "#@title Solucion Ejercicio A7 {display-mode:\"form\"}\n",
     "\n",
@@ -722,14 +730,14 @@
     "# de numeros primos entre 2 y n\n",
     "def contar_primos(n):\n",
     "    contador = 0\n",
-    "    n = 2\n",
+    "    x = 2\n",
     "    # para cada numero entre 2 y numero\n",
-    "    while n <= numero:\n",
+    "    while x <= n:\n",
     "        # si n es primo sumar 1 al contador\n",
-    "        if es_primo(n):\n",
+    "        if es_primo(x):\n",
     "            contador = contador + 1\n",
     "        # pasar al siguiente numero\n",
-    "        n = n + 1\n",
+    "        x = x + 1\n",
     "    # Salida de la funcion\n",
     "    return contador\n",
     "\n",
@@ -948,9 +956,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
