--- a/cursos/espanol/programacion/6.1_funciones.ipynb
+++ b/cursos/espanol/programacion/6.1_funciones.ipynb
@@ -698,17 +698,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hay 4 numeros primos entre 2 y 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio A7 {display-mode:\"form\"}\n",
     "\n",
@@ -956,9 +948,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -970,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
