--- a/cursos/espanol/programacion/8_for.ipynb
+++ b/cursos/espanol/programacion/8_for.ipynb
@@ -275,9 +275,9 @@
    "id": "b5709cf1-f7b3-4081-a2b4-5cf71acfcd29",
    "metadata": {},
    "source": [
-    "## Combinando for y range()\n",
+    "## Usando for con una lista de indices\n",
     "\n",
-    "Ahora utilizaremos **for** en combinacion con la funcion **range()** para tener mas control sobre las listas que querramos utilizar. Recordemos que podemos acceder a los elementos de una lista utilizando los corchetes y el numero de la posicion de un elemento en la lista, por ejemplo usando **lista[2]** podemos acceder al tercer elemento ya que siempre comenzamos a contar desde cero."
+    "Ahora utilizaremos **for** para iterar sobre una lista de indices con los cuales accedere a elementos de otra lista. Recordemos que podemos acceder a los elementos de una lista utilizando los corchetes y el numero de la posicion de un elemento en la lista, por ejemplo usando **lista[2]** podemos acceder al tercer elemento ya que siempre comenzamos a contar desde cero."
    ]
   },
   {
@@ -389,10 +389,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e953f24c-1bc1-4f30-a47c-de945d3e55af",
+   "id": "564690fc",
    "metadata": {},
    "source": [
-    "Ahora veamos como podemos hacer lo mismo utilizando la funcion range()"
+    "## Combinando for y range()\n",
+    "\n",
+    "Ahora utilizaremos **for** en combinacion con la funcion **range()** para hacer esto de forma más generica. Utilizaremos la funcion range() para generar la lista de indices con los cuales accederemos a los valores de otra lista."
    ]
   },
   {
