--- a/cursos/espanol/programacion/8_for.ipynb
+++ b/cursos/espanol/programacion/8_for.ipynb
@@ -497,7 +497,7 @@
    "outputs": [],
    "source": [
     "def sumar_pos_pares(valores):\n",
-    "    #@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
+    "    #Escribir aqui la solucion\n",
     "    \n",
     "    "
    ]
