--- a/cursos/espanol/programacion/A0_practica.ipynb
+++ b/cursos/espanol/programacion/A0_practica.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "Esta unidad consiste solo en ejercicios. Aqui algunos tips: \n",
     "- Hay distintas dificultades de ejercicios.\n",
-    "- Probablemente muchos ejercicios no te salgan y necesites ayudarte de internet.\n",
     "- No es necesario terminarlos todos en un dia. \n",
     "- Tomate tu tiempo.\n",
     "- Hay mas de una solucion correcta, por lo que si tu solucion es distinta a la planteada no te preocupes pero asegurate de que pase todos los casos de prueba.\n",
     "- Si un ejercicio no te sale pasa al siguiente y al final vuelve a ese ejercicio.\n",
-    "- Solo mira la solucion luego de varios intentos. Esfuerzate al maximo por resolverlos."
+    "- Solo mira la solucion luego de varios intentos. Esfuerzate al maximo por resolverlos.\n",
+    "- Probablemente muchos ejercicios no te salgan y necesites mirar la solucion. Esto es parte del proceso de aprendizaje. Lo importante es intentar y probar la mayor cantidad de veces posibles antes de darte por vencid@."
    ]
   },
   {
