Added Programacion Basico Tour

--- a/cursos/espanol/datascience/0__datasets.ipynb
+++ b/cursos/espanol/datascience/0__datasets.ipynb
@@ -90,7 +90,11 @@
     "\n",
     "- https://epistasislab.github.io/pmlb/\n",
     "- https://cds.climate.copernicus.eu/#!/search\n",
-    "- https://ourworldindata.org/"
+    "- https://ourworldindata.org/\n",
+    "\n",
+    "## Buscador de datasets\n",
+    "\n",
+    "- https://www.sci2sci.com/"
    ]
   },
   {
@@ -99,7 +103,9 @@
    "id": "2f2038e5-83b0-48a2-a9a2-3fdaa4cb58fb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#https://ourworldindata.org/better-learning"
+   ]
   },
   {
    "cell_type": "code",
