--- a/cursos/espanol/datascience/0__cheatsheet.ipynb
+++ b/cursos/espanol/datascience/0__cheatsheet.ipynb
@@ -10,31 +10,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e4ddd1a",
+   "metadata": {},
+   "source": [
+    "# Crear enviroments de anaconda desde un environment.yml file\n",
+    "\n",
+    "- https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/04-sharing-environments/index.html\n",
+    "\n",
+    "\n",
+    "Ejemplo del contenido del archivo de configuracion environment.yml:\n",
+    "```\n",
+    "name: ejemploenv\n",
+    "\n",
+    "dependencies:\n",
+    " - jupyterlab=1.0\n",
+    " - matplotlib=3.1\n",
+    " - pandas=0.24\n",
+    " - scikit-learn=0.21\n",
+    " - pip=19.1\n",
+    " - pip:\n",
+    "   - kaggle==1.5\n",
+    "   - yellowbrick==0.9\n",
+    "```\n",
+    "\n",
+    "To create the environment:\n",
+    "```\n",
+    "conda env create --file environment.yml\n",
+    "```\n",
+    "\n",
+    "To create the environment in you proyect folder:\n",
+    "```\n",
+    "conda env create --file environment.yml --prefix ./env\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40293e44-2bd2-4180-beda-ae138d511023",
    "metadata": {},
    "source": [
+    "# Agregando y eliminando kernels de jupyter\n",
+    "\n",
     "#### List all kernels and grap the name of the kernel you want to remove\n",
     "```\n",
     "jupyter kernelspec list\n",
     "```\n",
     "\n",
+    "#### Add kernel\n",
+    "```\n",
+    "conda activate ejemploenv\n",
+    "pip install ipykernel\n",
+    "python -m ipykernel install --user --name ejemploenv --display-name \"Mi env de ejemplo\"\n",
+    "```\n",
+    "\n",
     "#### Remove it\n",
     "```\n",
-    "jupyter kernelspec remove <kernel_name>\n",
-    "```\n",
-    "\n",
-    "#### Add kernel\n",
-    "```\n",
-    "conda activate myenv\n",
-    "pip install ipykernel\n",
-    "python -m ipykernel install --name myenv --user --display-name \"Python (myenv)\"\n",
-    "```\n",
-    "\n",
-    "#### Add kernel\n",
-    "```\n",
-    "conda activate myenv\n",
-    "pip install jupyter\n",
-    "ipython kernel install --name myenv --user\n",
+    "jupyter kernelspec remove ejemploenv\n",
     "```"
    ]
   },
@@ -222,6 +254,36 @@
    "source": [
     "import missingno as msno\n",
     "msno.matrix(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb435888",
+   "metadata": {},
+   "source": [
+    "# Automatic Data Preprocessing\n",
+    "\n",
+    "- Ver: https://pycaret.gitbook.io/docs/get-started/preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06d4866a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas.api.types import is_numeric_dtype\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "for c in df.columns:\n",
+    "  print(c, is_numeric_dtype(df[c]), df[c].isna().sum())\n",
+    "  if is_numeric_dtype(df[c]):\n",
+    "    df[c].fillna(df[c].mean(), inplace=True)\n",
+    "    df[c] = scaler.fit_transform(df[[c]])\n",
+    "  else:\n",
+    "    df[c].fillna(df[c].mode(), inplace=True)\n",
+    "    df = pd.get_dummies(df, columns=[c])"
    ]
   },
   {
