--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "Primero que nada presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el mouse encima de el)\n",
     "\n",
-    "Ejutar la siguiente celda para despertar a la tortuga y poder empezar a darle instrucciones:"
+    "Ejecutar la siguiente celda para despertar a la tortuga y poder empezar a darle instrucciones:"
    ]
   },
   {
@@ -51,7 +51,121 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adelante(10)"
+    "adelante(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos la palabra `derecha` para que la tortuga doble hacia la derecha y entre parentesis pondremos el angulo que queremos que gire, por ejemplo: `derecha(90)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derecha(90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos la palabra `borrar_todo()` para se borre todo lo que la tortuga ha dibujado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "borrar_todo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizaremos la palabra `ir_a_casa()` para que la tortuga vuelva a su posicion inicial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ir_a_casa()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 metros de lado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adelante(100)\n",
+    "derecha(90)\n",
+    "adelante(100)\n",
+    "derecha(90)\n",
+    "adelante(100)\n",
+    "derecha(90)\n",
+    "adelante(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1: \n",
+    "\n",
+    "Dibuja un cuadrado con sus lados de 200 metros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribe a continuacion tus instrucciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Click aqui para ver la Solucion del Ejercicio 1</summary>\n",
+    "<code>\n",
+    "\n",
+    "adelante(200)\n",
+    "\n",
+    "derecha(90)\n",
+    "\n",
+    "adelante(200)\n",
+    "\n",
+    "derecha(90)\n",
+    "\n",
+    "adelante(200)\n",
+    "\n",
+    "derecha(90)\n",
+    "\n",
+    "adelante(200)\n",
+    "\n",
+    "</code>\n",
+    "</details>"
    ]
   },
   {
