--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "Primero que nada presionamos el icono ▶️ para ejecutar (se encuentra a la izquierda de cada celda que contiene nuestro codigo de programacion, aparece cuando posicionamos el mouse encima de el)\n",
     "\n",
-    "Ejecutar la siguiente celda para despertar a la tortuga y poder empezar a darle instrucciones:"
+    "Ejecutar la siguiente celda para despertar a la tortuga y poder empezar a darle instrucciones (ten en cuenta que despertar a la tortuga puede tomar un par de minutos, ten paciencia):"
    ]
   },
   {
@@ -29,6 +29,7 @@
    "source": [
     "# NO HACE FALTA ENTENDER ESTE CODIGO. \n",
     "# SOLO EJECUTARLO PARA EMPEZAR\n",
+    "# PUEDE TARDAR UN PAR DE MINUTOS\n",
     "!pip install SeTeEscapoLaTortuga -U -q\n",
     "from SeTeEscapoLaTortuga.Turtle import *\n",
     "despertar_tortuga()"
@@ -139,7 +140,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribe a continuacion tus instrucciones"
+    "# Escribe a continuacion tus instrucciones\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -163,6 +167,94 @@
     "derecha(90)\n",
     "\n",
     "adelante(200)\n",
+    "\n",
+    "</code>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilicemos ahora la palabra `color` para cambiar el color con el que la tortuga dibuja y entre parentesis pondremos el color que queremos que gire, por ejemplo: `color('yellow')`. Como vemos en el ejemplo el color debe estar en ingles y entre comillas.\n",
+    "\n",
+    "La tortuga entiende los colores en ingles asi que aprenderemos los nombres de los colores basicos:\n",
+    "- negro: black\n",
+    "- blanco: white\n",
+    "- gris: grey\n",
+    "- amarillo: yellow\n",
+    "- verde: green\n",
+    "- azul: blue\n",
+    "- rojo: red\n",
+    "- naranja: orange\n",
+    "- marron: brown\n",
+    "- rosa: pink\n",
+    "- celeste: lightblue\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "borrar_todo()\n",
+    "ir_a_casa()\n",
+    "\n",
+    "color('yellow')\n",
+    "adelante(100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2: \n",
+    "\n",
+    "Dibuja un cuadrado con sus lados de 100 metros y de cuatro colores diferentes: verde, azul, rojo y naranja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribe a continuacion tus instrucciones\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Click aqui para ver la Solucion del Ejercicio 2</summary>\n",
+    "<code>\n",
+    "\n",
+    "color('green')\n",
+    "\n",
+    "adelante(100)\n",
+    "\n",
+    "derecha(90)\n",
+    "\n",
+    "color('blue')\n",
+    "\n",
+    "adelante(100)\n",
+    "\n",
+    "derecha(90)\n",
+    "\n",
+    "color('red')\n",
+    "\n",
+    "adelante(100)\n",
+    "\n",
+    "derecha(90)\n",
+    "\n",
+    "color('orange')\n",
+    "\n",
+    "adelante(100)\n",
     "\n",
     "</code>\n",
     "</details>"
