--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -234,6 +234,10 @@
     "<summary>Click aqui para ver la Solucion del Ejercicio 2</summary>\n",
     "<code>\n",
     "\n",
+    "borrar_todo()\n",
+    "\n",
+    "ir_a_casa()\n",
+    "\n",
     "color('green')\n",
     "\n",
     "adelante(100)\n",
