--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -75,22 +75,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizaremos la palabra `borrar_todo()` para se borre todo lo que la tortuga ha dibujado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "borrar_todo()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Utilizaremos la palabra `ir_a_casa()` para que la tortuga vuelva a su posicion inicial"
    ]
   },
@@ -107,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 metros de lado"
+    "Utilizaremos la palabra `borrar_todo()` para se borre todo lo que la tortuga ha dibujado"
    ]
   },
   {
@@ -116,6 +100,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "borrar_todo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora probemos escribir una instruccion abajo de otra para que las realice todas juntas y dibujemos un cuadrado de 100 metros de lado. Empecemos con borrar_todo e ir_a_casa para empezar de cero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "borrar_todo()\n",
+    "ir_a_casa()\n",
+    "\n",
     "adelante(100)\n",
     "derecha(90)\n",
     "adelante(100)\n",
