--- a/cursos/espanol/programacion_basico/0_intro.ipynb
+++ b/cursos/espanol/programacion_basico/0_intro.ipynb
@@ -157,6 +157,10 @@
     "<summary>Click aqui para ver la Solucion del Ejercicio 1</summary>\n",
     "<code>\n",
     "\n",
+    "borrar_todo()\n",
+    "\n",
+    "ir_a_casa()\n",
+    "    \n",
     "adelante(200)\n",
     "\n",
     "derecha(90)\n",
